# runaway

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
src/runaway/: __init__.py  agents.py  batch.py  cli.py  config.py  experiment_plan.py  floors.py  model.py  pygame_visualization.py  rendering.py  results.py  visualization.py
src/runaway/cli/: __init__.py  grid_presets.py  main.py
src/runaway/core/: __init__.py  agents.py  config.py  floors.py  model.py
src/runaway/experiments/: __init__.py  batch.py  plan.py  results.py
src/runaway/renderers/: __init__.py  base.py  mesa.py  pygame.py
src/runaway/renderers/templates/: modular_template.html
src/runaway/scenarios/: __init__.py  d17-wall-runs.json  d17.py
src/runaway/statistics/: __init__.py  charts.py  collector.py  dashboard.py  protocol.py  writer.py
src/runaway/statistics/js/: SidebarChartModule.js  SidebarTextModule.js
src/runaway/utils/: __init__.py  png_to_wall_runs.py
tests/cli/: test_batch_runner.py  test_renderer_options.py  test_visualization_grid.py
tests/model/: test_evacuation_model.py
tests/scenarios/: test_d17_layout.py
tests/utils/: test_png_to_wall_runs.py
tests/visualization/: test_pygame_renderer.py
