[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "runaway"
version = "0.1.0"
description = "Mesa-based building evacuation simulation"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Runaway Team" }]
dependencies = [
  "mesa>=2.2,<4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
runaway = "runaway.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.lint.isort]
known-first-party = ["runaway"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
